--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.19.2",
     "feather-icons": "^4.28.0",
     "sirv-cli": "^1.0.0",
     "svelte-spa-router": "^3.2.0"
